# m2-internship

./: .gitignore  bibliography.yaml  defense.typ  detailed-page-fault-no-fence.txt  detailed-page-fault.c  detailed-page-fault.txt  execution.typ  flake.nix  gem5-config.py  min-diffs.py  notes-aeolia.txt  page-fault.c  page-fault.txt  pf-privilege-flow.typ  report.typ  result-dev  sigsegv.c  sigsegv.txt  simple-arrow.typ  spec.typ  swapon-sync.c  tasks.txt  torvalds-page-fault-cost.md  treefmt.nix  updates.typ
extmem-ufault/: package.nix  result
libufault/: libufault.c  libufault.h  libufault_test.c  meson.build
libuserfault/: libuserfault.c  libuserfault.h  libuserfault_test.c  meson.build
linux-page-fault-timings/: 0001-mm-add-page-fault-timing-debugging-code.patch  collect.c
page-fault-breakdown/: 0001-mm-add-page-fault-timing-debugging-code.patch
page-fault-timings/: 0001-mm-add-CONFIG_TRACE_PF-to-trace-PF-entry-and-iret.patch  0001-mm-add-page-fault-timing-debugging-code.patch  0002-mm-add-PF-fast-tracepoints.patch  0003-mm-swap-add-SWAP_FLAG_SYNCHRONOUS_WRITE.patch  0003-mm-swap-add-SWAP_FLAG_SYNC_IO.patch  build-kernel.sh  build-pahole.sh  collect-for-all-variants.sh  collect-page-fault-timings.c  collect.c  convert-timeline-to-stacked-area-chart.py  run.sh
page-fault-timings/results/: .gitignore  extmem-read-stacked-small.csv  extmem-read-stacked.csv  main.tex  (+10 more)
presentations/: pf-ideas.typ  updates.typ  xui.typ
sigsegv-microbenchmark/: .gitignore  sigsegv.c  stats.py
tokio-page-faults/: Cargo.toml  README.md  blocking.typ  simple-arrow.typ
tokio-page-faults/src/: main.rs  mmap.rs
ufault-patches/: 0001-uf-Add-MSR-definitions.patch  0001-x86-Add-X86_FEATURE_UFAULT.patch  0002-ufault-Add-ufault_-un-register_handler-system-calls.patch  0002-x86-Add-User-Fault-MSR-definitions.patch  0003-x86-Add-CONFIG_X86_USER_FAULTS.patch  0004-x86-Add-ufault_register_handler-system-call.patch  0005-uffd-dax-patch.patch  0006-dma-request-chans-multi-process-simple.patch  0007-less-locking-when-copy.patch  0008-attempt-showing-upcall-path.patch  0009-attempt-at-showing-full-upcall-path.patch  README.md
uintr-vector-experiments/: 0001-x86-uintr-Add-UINTR_HANDLER_FLAG_SET_UINV.patch  0002-x86-uintr-Add-UINTR_HANDLER_FLAG_SET_UPIR.patch  0003-x86-uintr-Add-UINTR_HANDLER_FLAG_NO_SELF_IPI.patch  0004-x86-uintr-Add-UINTR_HANDLER_FLAG_SET_UPID_NV.patch  README.md  run-uintr-vector-experiment.c
uinv-pf-experiment/: 0001-x86-uintr-Set-UINV-to-X86_TRAP_PF-for-testing.patch  experiment.c
user-interrupt-timings/: collect.c  test.c
userfaultfd-page-fault-timings/: 0001-mm-add-page-fault-timing-debugging-code.patch  collect.c  test.c
(+332 files in other folders)
